<?xml version="1.0"?>
<package format="2">
  <name>mrpt_rawlog</name>
  <version>1.0.6</version>
  <description>This package provides nodes to record and play MRPT rawlogs.</description>

  <maintainer email="markus.bader@tuwien.ac.at">Markus Bader</maintainer>
  <maintainer email="joseluisblancoc@gmail.com">Jose Luis Blanco-Claraco</maintainer>

  <url>https://wiki.ros.org/mrpt_rawlog</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>mrpt_libobs</depend>
  <depend>mrpt_libgui</depend>
  <depend>mrpt_libros_bridge</depend>


  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mrpt_msgs</depend>
  <depend>mrpt_msgs_bridge</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>rosbag</depend>
  <depend>marker_msgs</depend>


</package>
