<?xml version="1.0"?>
<package format="3">
  <name>mrpt_reactivenav2d</name>
  <version>2.0.1</version>
  <description>Reactive navigation for wheeled robots using MRPT navigation algorithms (TP-Space)</description>

  <maintainer email="jlblanco@ual.es">Jose-Luis Blanco-Claraco</maintainer>
  <maintainer email="shravansomashekara.rai@gmail.com">Shravan S Rai</maintainer>

  <author email="jlblanco@ual.es">Jose-Luis Blanco-Claraco</author>

  <license>BSD</license>

  <url type="website">https://github.com/mrpt-ros-pkg/mrpt_navigation</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>mrpt2</depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>mrpt_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>mrpt_nav_interfaces</depend>

  <depend>ament_lint_common</depend>
  <depend>ament_lint_auto</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
