<?xml version="1.0"?>
<package format="2">
  <name>mrpt_reactivenav2d</name>
  <version>1.0.7</version>
  <description>Reactive navigation for 2D robots using MRPT navigation algorithms (TP-Space)</description>

  <maintainer email="jlblanco@ual.es">Jose-Luis Blanco-Claraco</maintainer>

  <license>BSD</license>

  <url type="website">https://wiki.ros.org/mrpt_reactivenav2d</url>

  <author email="jlblanco@ual.es">Jose-Luis Blanco-Claraco</author>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>mrpt_libnav</depend>
  <depend>mrpt_libros_bridge</depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>

  <build_depend>mrpt_msgs</build_depend>
  <build_export_depend>mrpt_msgs</build_export_depend>
  <exec_depend>mrpt_msgs</exec_depend>

  <export>
  </export>
</package>
